wip: bringing emception to web
